// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GradePicker disables the button and has correct text for not graded assignment type 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {},
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={1}
        onPress={null}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              undefined,
            ]
          }
        >
          Not Graded
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`GradePicker doesnt render late policy if no grade 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingTop": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {
              "color": "#7F91A7",
            },
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/Add.png",
            }
          }
          style={
            Object {
              "tintColor": "#368BD8",
            }
          }
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`GradePicker renders points based grades 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {},
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              undefined,
            ]
          }
        >
          
          5/10
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`GradePicker renders the activity indicator when pending 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {},
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={1}
        onPress={null}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <ActivityIndicator
          animating={true}
          color="#999999"
          hidesWhenStopped={true}
          size="small"
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`GradePicker renders the picker for pass fail assignments 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {},
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/Add.png",
            }
          }
          style={
            Object {
              "tintColor": "#368BD8",
            }
          }
        />
      </TouchableOpacity>
    </View>
  </View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 0,
        "overflow": "hidden",
      }
    }
  >
    <PickerIOS
      onValueChange={[Function]}
      selectedValue=""
    >
      <Item
        label="---"
        value=""
      />
      <Item
        label="Complete"
        value="complete"
      />
      <Item
        label="Incomplete"
        value="incomplete"
      />
      <Item
        label="Excuse Student"
        value="ex"
      />
    </PickerIOS>
  </View>
</View>
`;

exports[`GradePicker renders the rubric score when useRubricForGrading 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {},
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              undefined,
            ]
          }
        >
          
          22/10
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`GradePicker renders with excused 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {},
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              undefined,
            ]
          }
        >
          Excused
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`GradePicker renders with late policy 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingTop": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {
              "color": "#7F91A7",
            },
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#7F91A7",
              },
            ]
          }
        >
          
          9/10
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 8,
          "marginTop": 2,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#FC5E13",
              "fontSize": 14,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        Late
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#FC5E13",
              "fontSize": 14,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        -
        1pts
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            undefined,
          ]
        }
      >
        Final Grade
      </Text>
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            undefined,
          ]
        }
      >
        
        8/10
      </Text>
    </View>
  </View>
</View>
`;

exports[`GradePicker renders with no grade 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {},
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/Add.png",
            }
          }
          style={
            Object {
              "tintColor": "#368BD8",
            }
          }
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`GradePicker updates the visible rubric score when useRubricForGrading and rubrucScore changes 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "lightgray",
        "borderBottomWidth": 0.5,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontFamily": ".SFUIDisplay-semibold",
              "fontSize": 20,
            },
            Object {},
          ]
        }
      >
        Grade
      </Text>
      <TouchableOpacity
        accessibilityLabel="Customize Grade"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "minHeight": 20,
          }
        }
        testID="grade-picker.button"
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              undefined,
            ]
          }
        >
          
          22/10
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
